@@ -11,6 +11,9 @@
    command to the nodetool (CASSANDRA-2991)
  * make cleanup and normal compaction able to skip empty rows
    (rows containing nothing but expired tombstones) (CASSANDRA-3039)
+ * work around native memory leak in com.sun.management.GarbageCollectorMXBean
+   (CASSANDRA-2868)
+
 
 0.8.4
  * include files-to-be-streamed in StreamInSession.getSources (CASSANDRA-2972)
